# lensys

./: .env.example  .gitignore  README.md  go.mod  index.html  package.json  tailwind.config.js
cmd/lensys/: main.go
internal/lensys/: api.go  ui.go
public/buddies/: ATTRIBUTION.md
slides/: package.json  slides.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  lib.rs  main.rs
src-tauri/src/commands/: claude.rs  code_context.rs  file_edit.rs  memory.rs  mod.rs  screenshot.rs  vision.rs  web_search.rs  wiki.rs
src/components/: ExpandedPanel.tsx  Orb.tsx
src/hooks/: useVapi.ts
